--- a/ComputerGraphicsCursProject/MainWindow.xaml
+++ b/ComputerGraphicsCursProject/MainWindow.xaml
@@ -7,6 +7,39 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.3*" />
+                <RowDefinition Height="0.3*" />
+                <RowDefinition Height="0.3*" />
+                <RowDefinition Height="0.8*" />
+            </Grid.RowDefinitions>
+            <Button Name="mashtabPlusButton" Click="mashtabPlusButton_Click" Content="+" HorizontalAlignment="Left" Height="54" Margin="164,10,0,0" VerticalAlignment="Top" Width="91"/>
+            <Button Name="mashtabMinusButton" Click="mashtabMinusButton_Click" Content="-" HorizontalAlignment="Left" Height="54" Margin="64,10,0,0" VerticalAlignment="Top" Width="95"/>
+            <Button Name="checkBoxOfMerkersEnabled" Click="checkBoxOfMerkersEnabled_CheckedChanged" Content="режим редактирования" HorizontalAlignment="Left" Height="38" Margin="100,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="155"/>
+            <Button Name="buttonOfApply1" Click="buttonOfApply1_Click" Content="применить" HorizontalAlignment="Left" Height="40" Margin="134,24.333,0,0" Grid.Row="2" VerticalAlignment="Top" Width="94"/>
+            <TextBox Name="textBoxOfNumberOfDrawPoints" HorizontalAlignment="Left" Height="40" Margin="25,24.333,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="75"/>
+            <Button Name="buttonDown" Click="buttonDown_Click" Content="вниз" HorizontalAlignment="Left" Height="31" Margin="159,22.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+            <Button Name="buttonRight" Click="buttonRight_Click" Content="вправо" HorizontalAlignment="Left" Height="31" Margin="159,73.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+            <Button Name="buttonOtNas" Click="buttonOtNas_Click" Content="Х" HorizontalAlignment="Left" Height="31" Margin="159,125.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+            <Button Name="buttonUp" Click="buttonUp_Click" Content="вверх" HorizontalAlignment="Left" Height="31" Margin="51,22.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+            <Button Name="buttonLeft" Click="buttonLeft_Click" Content="влево" HorizontalAlignment="Left" Height="31" Margin="51,73.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+            <Button Name="buttonNaNas" Click="buttonNaNas_Click" Content="*" HorizontalAlignment="Left" Height="31" Margin="51,125.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+            <Button Name="buttonOfDataPointCounter" Click="buttonOfDataPointCounter_Click" Content="след точка" HorizontalAlignment="Left" Height="31" Margin="100,161.333,0,0" Grid.Row="3" VerticalAlignment="Top" Width="82"/>
+        </Grid>
+        <Grid Column="1">
+            <WindowsFormsHost
+                x:Name="Host"
+                HorizontalAlignment="Stretch" 
+                VerticalAlignment="Stretch" 
+                Background="White" 
+                Initialized="HostInitialized">
+            </WindowsFormsHost>
+        </Grid>
+
     </Grid>
 </Window>
